--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
 body{
-  font-family: 'Cairo', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   direction: rtl;
 }
 
