--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --background: #262163;
+  --foreground: #DFC96D;
+}
+
 
 body{
   font-family: 'Cairo', sans-serif;
