--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,16 @@ body{
 }
 
 
+html {
+  scroll-behavior: smooth;
+}
+
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #262163;
+  border-radius: 8px;
+}
