--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 
 body{
-  font-family: 'Cairo', sans-serif;
+  font-family: 'Tajawal', sans-serif;
   direction: rtl;
   overflow-x: hidden;
   background-color: #f8fafc;
